#  libfoxenstack -- Library for switching user-space stacks
#  Copyright (C) 2018  Andreas Stöckel
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero General Public License as
#  published by the Free Software Foundation, either version 3 of the
#  License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU Affero General Public License for more details.
#
#  You should have received a copy of the GNU Affero General Public License
#  along with this program.  If not, see <https://www.gnu.org/licenses/>.

option('with_valgrind',
       type: 'boolean',
       value: false,
       description: 'Enable runtime support for valgrind.')

option('with_cpp_exceptions',
       type: 'boolean',
       value: true,
       description: 'Enables generic support for C++ exceptions. Not required for x86 and x86_64.')
